--- a/GoldenEVCore/GoldenEVCore/GoldenEVCore.csproj
+++ b/GoldenEVCore/GoldenEVCore/GoldenEVCore.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CommandLine\CommandLineInterface.cs" />
     <Compile Include="CommandLine\Commands\ClearCommand.cs" />
+    <Compile Include="CommandLine\Commands\CreateCommand.cs" />
     <Compile Include="CommandLine\Commands\ICommand.cs" />
     <Compile Include="CommandLine\Commands\NullCommand.cs" />
     <Compile Include="CommandLine\Commands\VersionCommand.cs" />
@@ -52,9 +53,23 @@
     <Compile Include="Models\Stat.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Data.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
