creation of XML doc

--- a/GoldenEVCore/GoldenEVCore/GoldenEVCore.csproj
+++ b/GoldenEVCore/GoldenEVCore/GoldenEVCore.csproj
@@ -32,6 +32,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,8 +50,10 @@
     <Compile Include="CommandLine\Commands\ClearCommand.cs" />
     <Compile Include="CommandLine\Commands\CreateCommand.cs" />
     <Compile Include="CommandLine\Commands\ICommand.cs" />
+    <Compile Include="CommandLine\Commands\InitCommand.cs" />
     <Compile Include="CommandLine\Commands\NullCommand.cs" />
     <Compile Include="CommandLine\Commands\VersionCommand.cs" />
+    <Compile Include="DataLayer\DataSource.cs" />
     <Compile Include="Models\EV.cs" />
     <Compile Include="Models\Pokemon.cs" />
     <Compile Include="Models\Stat.cs" />
@@ -61,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -68,8 +75,6 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Data.txt" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
