--- a/GoldenEVCore/GoldenEVCore/GoldenEVCore.csproj
+++ b/GoldenEVCore/GoldenEVCore/GoldenEVCore.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CommandLine\CommandLineInterface.cs" />
     <Compile Include="Commands\ClearCommand.cs" />
+    <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CreateCommand.cs" />
     <Compile Include="Commands\ExitCommand.cs" />
     <Compile Include="Commands\FetchCommand.cs" />
